@startuml "data architecture"
skinparam linetype ortho

entity Type {
    *id : int <<PK,generated>>
    ..
    ...
}

entity Port {
    *id : int <<PK,generated>>
    ..
    *local_id : string
    ..
    *plane : plane
    ..
    *type_id : int <<FK>>
    ..
    ...
}

entity Piece{
    *id : int <<PK,generated>>
    ..
    *type_id : int <<FK>>
    ..
    root_plane : plane
    ..
    ...
}

entity Connection {
    *connecting_piece_id : int <<PK,FK>>
    *connecting_piece_type_port_id : int <<FK>>
    ..
    *connected_piece_id : int <<PK,FK>>
    *connected_piece_type_port_id : int <<FK>>
    ..
    ...
}

Type ||--|{ Port
Type <-- Piece
Piece <-- Connection
Port <-- Connection

@enduml